--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "joi": "^17.10.1",
+    "@hookform/resolvers": "^2.9.10"
   },
   "scripts": {
     "start": "react-scripts start",
