--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dateformat": "^5.0.3",
     "history": "^5.3.0",
     "joi": "^17.10.1",
+    "query-string": "^9.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.4",
